# rompy-schism

./: .gitignore  404.html  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tbump.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml
backend_framework/: index.html
backend_tutorial/: index.html
boundary_conditions/: index.html
contributing/: index.html
docker/schism/: Dockerfile  compile.sh  include_modules
docs/: backend_framework.md  backend_tutorial.md  boundary_conditions.md  hotstart.md  index.md  installation.md  usage.md
docs/reference/: config.md
docs/source/: api.rst  backend_framework.rst  backend_tutorial.rst  boundary_conditions.rst  conf.py  hotstart.rst  index.rst  introduction.rst
examples/: demo.yaml  demo_nml.yaml  demo_nml_3d_lsc2.yaml  demo_nml_3d_lsc2_enhanced.yaml  demo_nml_3d_nontidal_velocities.yaml  demo_nml_3d_nontidal_velocities_enhanced.yaml  demo_nml_3d_tidal_velocities.yaml  demo_nml_3d_tidal_velocities_enhanced.yaml  demo_nml_enhanced.yaml  demo_tides_only.yaml  run_boundary_conditions_examples.py  run_declaritive_test.sh  test_backend_examples.py
examples/boundary_conditions_examples/: README.md
hotstart/: index.html
installation/: index.html
notebooks/: schism_demo.nb.py  schism_demo.yaml
notebooks/schism/: demo_nml_3d_lsc2.yaml  demo_nml_3d_lsc2_enhanced.yaml  demo_nml_3d_nontidal_velocities.yaml  demo_nml_3d_nontidal_velocities_enhanced.yaml  demo_nml_3d_tidal_velocities.yaml  demo_nml_3d_tidal_velocities_enhanced.yaml  station.in  (+7 more)
search/: search_index.json
tests/: conftest.py  simple_bctides_test.py  test_bctides_format_simple.py  test_boundary_conditions.py  test_boundary_plotting.py  test_boundary_plotting_updated.py  test_compare_gr3_generation.py  test_config_schema.py  test_enhanced_tidal_boundary.py  test_grid.py  test_hotstart.py  test_hotstart_integration.py  test_model_container.py  test_namelists.py  test_nml.py  test_pylibs_boundaries_expanded.py  test_schism_csiro.py  test_schism_data.py  test_schism_nml.py  test_sflux_plotting.py  test_tidal_boundary_consistency.py  test_vgridgenerators.py  test_visualization.py  utils.py  utils_pylibs.py
usage/: index.html
(+160 files in other folders)
